--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
+    "vue-star-rating": "^2.1.0",
     "vuex": "^4.1.0",
     "vuex-persistedstate": "^4.1.0"
   },
