--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/socket.io": "^3.0.2",
     "pinia": "^2.1.4",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vue-star-rating": "^2.1.0",
     "vuex": "^4.1.0",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
